// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSecurityWrapper > renders correctly 1`] = `
<div
  class="d-flex flex-column align-center full-width mt-10"
>
  
  <v-card-stub
    border="false"
    class="mb-2"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    
    <v-card-title-stub
      class="d-flex justify-center align-center"
      tag="div"
    >
      Section 1 
      
      
    </v-card-title-stub>
    <!--v-if-->
    
    
    
  </v-card-stub>
  <v-card-stub
    border="false"
    class=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    
    <v-card-title-stub
      class="d-flex justify-center align-center"
      tag="div"
    >
      Section 2 
      
      
    </v-card-title-stub>
    <!--v-if-->
    
    
    
  </v-card-stub>
  
</div>
`;

exports[`SettingsSecurityWrapper > renders correctly in mobile 1`] = `
<div
  class="d-flex flex-column align-center full-width mt-0"
>
  
  <v-card-stub
    border="false"
    class="mb-2"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    
    <v-card-title-stub
      class="d-flex justify-center align-center"
      tag="div"
    >
      Section 1 
      
      
    </v-card-title-stub>
    <!--v-if-->
    
    
    
  </v-card-stub>
  <v-card-stub
    border="false"
    class=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    
    <v-card-title-stub
      class="d-flex justify-center align-center"
      tag="div"
    >
      Section 2 
      
      
    </v-card-title-stub>
    <!--v-if-->
    
    
    
  </v-card-stub>
  
</div>
`;

exports[`SettingsSecurityWrapper > renders correctly when loading 1`] = `
<div
  class="d-flex flex-column align-center full-width mt-10"
>
  
  <v-card-stub
    border="false"
    class="mb-2"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    minheight="600"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    <loading-view-stub
      imgurl="loading-data"
    />
  </v-card-stub>
  <v-card-stub
    border="false"
    class=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    minheight="600"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    <loading-view-stub
      imgurl="loading-data"
    />
  </v-card-stub>
  
</div>
`;
